--- a/justonething.html
+++ b/justonething.html
@@ -15,14 +15,15 @@
     <section class="vh-100">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-5 col-xs-12 px-0 position-relative text-center">
-                    <img src="assets/img/justonething/jotbanner.png" alt="image" class="w-100 vh-100 d-mob-none">
-                    <img src="assets/img/justonething/jotbanner_mob.png" alt="image" class="w-100 d-desk-none mxh-285">
+                <div class="col-md-5 col-xs-12 px-0 position-relative text-left text-sm-center">
+                    <!-- <img src="assets/img/justonething/jotbanner.png" alt="image" class="w-100 vh-100 d-mob-none"> -->
+                    <div style="background-image: url(assets/img/justonething/jotbanner.png); background-size: cover; background-position: center; background-repeat: no-repeat;" class="w-100 vh-100 d-mob-none"></div>
+
+                    <img src="assets/img/justonething/jotbanner_mob_steps_head.png" alt="image"
+                        class="w-100 d-desk-none mxh-115">
                     <div class="layer_content d-desk-none w-100">
                         <img src="assets/img/justonething/partner_logo.png" alt="image">
-                        <p>a project of</p>
-                        <img src="assets/img/justonething/Artboard.png" alt="image">
-                        <img src="assets/img/justonething/partners-in-torah-white-logomark 1.png" alt="image">
+
                     </div>
                 </div>
                 <div class="col-md-7 col-xs-12 text-black">
@@ -33,8 +34,7 @@
                         <div class="content">
                             <h1>Thank you for taking on just one thing</h1>
                             <h2>30 minutes of Jewish learning a week - as a merit for our soldiers</h2>
-                            <p>Fill out the form and we'll match you with a chavruta (study partner) for your weekly
-                                study.</p>
+                            <p>Fill out the form and we'll match you with a chavruta (study partner) for your weekly study.</p>
                             <a href="justonethingsteps.html" class="blue_btn">Get started</a>
                         </div>
                     </div>
