--- a/justonethingsteps.html
+++ b/justonethingsteps.html
@@ -16,17 +16,17 @@
     <section class="vh-100">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-5 col-xs-12 px-0 position-relative text-left text-sm-center">
+                <div class="col-lg-5 col-sm-12 px-0 position-relative text-left text-sm-center">
                     <!-- <img src="assets/img/justonething/jotbanner.png" alt="image" class="w-100 vh-100 d-mob-none"> -->
                     <div style="background-image: url(assets/img/justonething/jotbanner.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
                         class="w-100 vh-100 d-mob-none"></div>
 
 
                         <div style="height: 115px ;background-image: url(assets/img/justonething/jotbanner_mob_steps_head.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
-                        class="w-100 d-desk-none mxh-115"></div>
+                        class="w-100 d-desk-none header-mobile"></div>
 
                 </div>
-                <div class="col-md-7 col-xs-12 text-black">
+                <div class="col-lg-7 col-sm-12 text-black">
 
 
 
