--- a/justonethingsteps.html
+++ b/justonethingsteps.html
@@ -18,8 +18,9 @@
             <div class="row">
                 <div class="col-lg-5 col-sm-12 px-0 position-relative text-left text-sm-center">
                     <!-- <img src="assets/img/justonething/jotbanner.png" alt="image" class="w-100 vh-100 d-mob-none"> -->
-                    <div style="background-image: url(assets/img/justonething/jotbanner.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
-                        class="w-100 vh-100 d-mob-none"></div>
+                    <div style="    min-height: 100vh;
+                    height: 100%;background-image: url(assets/img/justonething/jotbanner.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
+                        class="w-100  d-mob-none"></div>
 
 
                         <div style="height: 115px ;background-image: url(assets/img/justonething/jotbanner_mob_steps_head.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
