--- a/justonethingsteps.html
+++ b/justonethingsteps.html
@@ -650,7 +650,7 @@
                                         </div>
                                         <p class="mt-5">Select your timeslot</p>
     
-                                        <div class="sum_flex flex-wrap mb-5 mt-2 timeslots-wrapper">
+                                        <div class="sum_flex flex-wrap mb-5 mt-2 timeslots-wrapper desk">
                                             <div class="sum_div me-2">
                                                 <div class="fields">
     
