--- a/justonethingsteps.html
+++ b/justonethingsteps.html
@@ -20,7 +20,7 @@
                     <!-- <img src="assets/img/justonething/jotbanner.png" alt="image" class="w-100 vh-100 d-mob-none"> -->
                     <div style="    min-height: 100vh;
                     height: 100%;background-image: url(assets/img/justonething/jotbanner.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
-                        class="w-100  d-mob-none"></div>
+                        class="w-100  d-mob-none left-bg-desk"></div>
 
 
                         <div style="height: 115px ;background-image: url(assets/img/justonething/jotbanner_mob_steps_head.png); background-size: cover; background-position: center; background-repeat: no-repeat;"
@@ -31,7 +31,7 @@
 
 
 
-                    <div class="d-flex align-items-center right_content">
+                    <div class="d-flex  right_content">
                         <div class="steps_form">
                             <form id="form">
                                 <ul id="progressbar">
